Link up the live site with the README and contribute button

--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
   </head>
   <body>
     <div class="container">
-      <div class="col">
-        <div class="text-center">
-          <h1>The Earth Object</h1>
+      <div class="row py-5">
+        <div class="col">
+          <div class="text-center">
+            <h1>The Earth Object</h1>
 
-          <p>Everything on earth could be contained in a single JSON object. To contribute, checkout this link.</p>
+            <p>Everything on earth could be contained in a single JSON object:</p>
+          </div>
+          <div id="theEarthObjectsDisplay"></div>
         </div>
-        <div id="theEarthObjectsDisplay"></div>
+      </div>
+      <div class="row py-5">
+        <div class="col-md-4 offset-md-4">
+          <a href="https://github.com/iarobinson/theEarthObject" class="btn btn-block btn-success">Contribute</a>
+        </div>
       </div>
     </div>
 
