README.md update and add an image

--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
   <body>
     <div class="container">
       <div class="row py-5">
-        <div class="col">
+        <div class="col-2">
+          <img src="./assets/the-earth-image.jpg" class="img-fluid" />
+        </div>
+        <div class="col-10">
           <div class="text-center">
             <h1>The Earth Object</h1>
-
             <p>Everything on earth could be contained in a single JSON object:</p>
           </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
           <div id="theEarthObjectsDisplay"></div>
         </div>
       </div>
