--- a/index.html
+++ b/index.html
@@ -4,45 +4,51 @@
     <!-- Bootstrap Stuff -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1/new.min.css">
+    <link rel="stylesheet" href="main.css">
     <title>The Earth Object</title>
     <script src="earth.js" defer></script>
     <script>
       window.onload = () => {
         let display = document.getElementById("theEarthObjectsDisplay")
-        display.innerHTML = JSON.stringify(theEarthObjectJS, null, 2);
+        json = JSON.stringify(theEarthObjectJS, null, 2);
+        // user123444555621 Stack overflow legend
+        function syntaxHighlight(json) {
+          json = json.replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;');
+          return json.replace(/("(\\u[a-zA-Z0-9]{4}|\\[^u]|[^\\"])*"(\s*:)?|\b(true|false|null)\b|-?\d+(?:\.\d*)?(?:[eE][+\-]?\d+)?)/g, function (match) {
+              var cls = 'number';
+              if (/^"/.test(match)) {
+                  if (/:$/.test(match)) {
+                      cls = 'key';
+                  } else {
+                      cls = 'string';
+                  }
+              } else if (/true|false/.test(match)) {
+                  cls = 'boolean';
+              } else if (/null/.test(match)) {
+                  cls = 'null';
+              }
+              return '<span class="' + cls + '">' + match + '</span>';
+          });
+      }
+        display.innerHTML = syntaxHighlight(json);
       }
     </script>
   </head>
   <body>
-    <div class="container">
-      <div class="row py-5">
-        <div class="col-2">
-          <img src="./assets/the-earth-image.jpg" class="img-fluid" />
-        </div>
-        <div class="col-10">
-          <div class="text-center">
-            <h1>The Earth Object</h1>
-            <p>Everything on earth could be contained in a single JSON object:</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <pre id="theEarthObjectsDisplay"></pre>
-        </div>
-      </div>
-      <div class="row py-5">
-        <div class="col-md-4 offset-md-4">
-          <a href="https://github.com/iarobinson/theEarthObject" class="btn btn-block btn-success">Contribute</a>
-        </div>
-      </div>
-    </div>
-
-    <!-- Bootstrap Stuff -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+    <img class="logo" src="./assets/earthObject.png"/>
+    <blockquote>
+      <h1>The Earth Object.</h1> 
+      <p>Everything on earth could be contained in a single JSON object:</p>
+    </blockquote>
+    <pre id="theEarthObjectsDisplay"></pre>
+    <blockquote>
+      <p>If you would like to add to this amazing object please click here!</p>
+      <!-- :last-child on blockquote so added single style to button-->
+      <a href="https://github.com/iarobinson/theEarthObject"><button style="padding-bottom: 6px;">Contribute</button></a>
+    </blockquote>
+    
+</body>
 </html>
